--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuex-example",
+  "name": "vuex-counter",
   "version": "1.0.0",
   "private": true,
   "description": "## Project setup ``` npm install ```",
@@ -8,7 +8,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rimraf dist"
   },
   "main": "index.js",
   "dependencies": {
@@ -25,6 +26,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "rimraf": "^3.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
